--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   http:
   image_picker: ^0.7.4
   mime_type: ^1.0.0
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
