--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
-        android:label="formbloc_app"
+        android:label="ProductsApp"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
